fix(preferences): select overlap arrow
Former-commit-id: 36faaeb13979b4407b00761d69967b3538b45bdb [formerly 72b443f839fe6e0a1f59123fcc5e7ad4f8f870c8]
Former-commit-id: c78416b1afe87ef0f561ae76e61a492227b6f3bd

--- a/src/components/Preferences/Preferences.css
+++ b/src/components/Preferences/Preferences.css
@@ -84,6 +84,7 @@
 
 .pr_selectbox_icon {
     height: 1.25rem;
+    width: 1.25rem;
     pointer-events: none;
     position: absolute;
     right: 0.25rem;
@@ -91,9 +92,16 @@
     font-size: 0.75rem;
 }
 
+.pr_select {
+    padding-right: 1.5rem;
+}
+
+/* "Dark Reader" extension */
 html[data-darkreader-scheme="dark"] .pr_select {
     background-color: revert;
 }
+
+
 
 
 .pr_disclaimer {
